fix: increase code selection highlight visibility

--- a/packages/template/app/styles/prism.css
+++ b/packages/template/app/styles/prism.css
@@ -25,7 +25,7 @@ code[class*="language-"]::selection,
 pre[class*="language-"] *::selection,
 code[class*="language-"] *::selection {
   text-shadow: none;
-  background-color: hsl(212deg 100% 39%/0.05);
+  background-color: hsl(212deg 100% 50%/0.3);
 }
 
 pre {
